application-deployment/store/quarkuscoffeeshop-majestic-monolith/quarkuscoffeeshop-majestic-monolith-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: quarkuscoffeeshop-majestic-monolith
    app.kubernetes.io/component: quarkuscoffeeshop-majestic-monolith
    app.kubernetes.io/instance: quarkuscoffeeshop-majestic-monolith
  name: quarkuscoffeeshop-majestic-monolith
  namespace: quarkuscoffeeshop-integration
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: quarkuscoffeeshop-majestic-monolith
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: quarkuscoffeeshop-majestic-monolith
    spec:
      containers:
      - env:
        - name: PGSQL_URL
          value: jdbc:postgresql://coffeeshopdb:5432/coffeeshopdb?currentSchema=coffeeshop
        - name: PGSQL_USER
          value: coffeeshopuser
        - name: PGSQL_PASSWORD
          value: redhat-21
        - name: PGSQL_URL_BARISTA
          value: jdbc:postgresql://coffeeshopdb:5432/coffeeshopdb?currentSchema=coffeeshop
        - name: PGSQL_USER_BARISTA
          value: coffeeshopuser
        - name: PGSQL_PASSWORD_BARISTA
          value: redhat-21
        - name: PGSQL_URL_KITCHEN
          value: jdbc:postgresql://coffeeshopdb:5432/coffeeshopdb?currentSchema=coffeeshop
        - name: PGSQL_USER_KITCHEN
          value: coffeeshopuser
        - name: PGSQL_PASSWORD_KITCHEN
          value: redhat-21
        - name: CORS_ORIGINS
          value: http://CHANGEME
        - name: STORE_ID
          value: ATLANTA
        - name: STREAM_URL
          value: 'http://CHANGEME/dashboard/stream'
        - name: REST_URL
          value: http://CHANGEME
        image: image-registry.openshift-image-registry.svc:5000/quarkuscoffeeshop-cicd/quarkuscoffeeshop-majestic-monolith:latest
        imagePullPolicy: IfNotPresent
        name: quarkuscoffeeshop-majestic-monolith
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
